# fing

./: .gitignore  README.md
Algoritmos Evolutivos/PracticoAE/: .gitignore  Ej2.java  Makefile  cutgen1  ejercicio2  out.stat  setEnv  validador.py
Algoritmos Evolutivos/obligatorio-ae/: build.xml
Construccion Formal de Programas y Teoria de Tipos/: PRACTICO1.v  PRACTICO2.v  PRACTICO3.v  PRACTICO4.v  PRACTICO5.v  PRACTICO6.9.v  PRACTICO6.v
Construccion Formal de Programas y Teoria de Tipos/Practico7/: Actions.v  Maps.v  State.v
Metaheuristicas optimizacion de redes/: Guion.txt  readme.txt
Metodos Numericos/2015/: Error.m  (+5 more)
Programacion 4/: Accion.cpp  Accion.h  Archivo.cpp  Archivo.h  Cargar.cpp  Cargar.h  Carpeta.cpp  Carpeta.h  Comentario.cpp  Comentario.h  DataAccion.cpp  DataAccion.h  DataComentario.cpp  DataComentario.h  DataNotificacion.cpp  DataNotificacion.h  DataRecurso.cpp  DataRecurso.h  DataUsuario.cpp  DataUsuario.h  DateTime.cpp  DateTime.h  EDayOutOfRange.h  EHourOutOfRange.h  EMinOutOfRange.h  EMonthOutOfRange.h  EYearOutOfRange.h  ExFechaInvalida.h  ExFormatoIncorrectoNickname.h  ExMemoriaNoSeteada.h  ExNoExisteComentario.h  ExNoExisteUsuario.h  ExNoHayUsuariosRegistrados.h  ExNoTieneDerechos.h  ExNombreInvalidoRecurso.h  ExRutaInvalida.h  ExYaExisteRecurso.h  ExYaTieneDerColaborador.h  Factory.cpp  Factory.h  (+48 more)
Redes de Computadoras/tarea2/: .gitignore  CMakeLists.txt  EjemploPDF.cc  README.md  cliente  cliente.cc  servidor  servidor.cc
Redes de Computadoras/tarea2/streaming/: CMakeLists.txt  client_udp.cc  cliente  server_udp.cc  servidor
(+836 files in other folders)
